# ai-detector

./: .gitignore  Dockerfile  Dockerfile.gpu  README.md  docker-compose.gpu.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: build-windows-exe.yml  docker-publish-cpu.yml  docker-publish-gpu.yml  release.yml
app/: auth.py  config.py  database.py  main.py
app/api/: alerts.py  detections.py  notify.py  streams.py  system.py  web_routes.py  ws.py
app/detectors/: __init__.py  base.py  opencv_detector.py  yolo_detector.py
app/models/: __init__.py  alert.py  detection.py  notify_config.py  stream_source.py
app/services/: alert_service.py  detection_service.py  notify_service.py  stream_service.py
app/web/templates/: alerts.html  base.html  detections.html  login.html  monitor.html  notify.html  preview.html  streams.html
